--- a/index.css
+++ b/index.css
@@ -131,6 +131,16 @@
     padding-top: 100px;
 }
 
+.client-img-container {
+    width: 300px;
+    height: 200px;
+}
+
+.client-img {
+    width: 300px;
+    height: 200px;
+}
+
 #pricing-container {
     background-image: url("./gallery/Pricing Background.svg");
     background-size: 100% 100%;
@@ -148,13 +158,17 @@
 }
 
 .price-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     border-radius: 10px;
     box-shadow: 3px 3px 10px 8px rgba(0, 0, 0, 0.2);
     background-color: white;
     padding: 40px;
     margin-bottom: 30px;
     text-align: center;
-    width: 25%;
+    width: 300px;
+    height: 500px;
 }
 
 .price-card h4 {
