--- a/index.css
+++ b/index.css
@@ -446,6 +446,7 @@
 
     #customer-container {
         height: 620px;
+        background-image: url("./gallery/Background-\(Portrait\).jpg");
     }
 
     .card-body {
